; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hv/extr_ring_buffer.c_hv_need_to_signal.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hv/extr_ring_buffer.c_hv_need_to_signal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hv_ring_buffer_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.hv_ring_buffer_info*)* @hv_need_to_signal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hv_need_to_signal(i64 %0, %struct.hv_ring_buffer_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.hv_ring_buffer_info*, align 8
  store i64 %0, i64* %4, align 8
  store %struct.hv_ring_buffer_info* %1, %struct.hv_ring_buffer_info** %5, align 8
  %6 = call i32 (...) @mb()
  %7 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %8 = getelementptr inbounds %struct.hv_ring_buffer_info, %struct.hv_ring_buffer_info* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = call i32 (...) @rmb()
  %16 = load i64, i64* %4, align 8
  %17 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %18 = getelementptr inbounds %struct.hv_ring_buffer_info, %struct.hv_ring_buffer_info* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp eq i64 %16, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %14
  store i32 1, i32* %3, align 4
  br label %25

24:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @mb(...) #1

declare dso_local i32 @rmb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
